# llm

./: README.md  biome.json  demo.html  pyproject.toml  vercel.json
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  question.yml
.github/workflows/: ci.yml  format.yml  minify.yml  purge-cdn.yml  tag.yml
docs/: API.md
examples/js/: chat.html
examples/python/: basic.py
examples/web/: chat.html  demo-multi.html  demo.css  demo.html
js/: chat.js  chat.min.js
tests/: __init__.py  test_client.py
ultralytics_llm/: __init__.py  client.py
